# hackerton-ax-myrealtrip

./: .gitignore  AGENTS.docx  AGENTS.md  Codex_Development_Spec.docx  README.md
docs/: 00-Project-Overview.docx  00-Project-Overview.md  01-Problem-Definition.docx  01-Problem-Definition.md  02-Architecture.md  02-Business-Analysis.docx  02-Business-Analysis.md  03-Architecture.docx  03-Architecture.md  03-Directory-Structure.md  04-Data-Schema.md  04-Directory-Structure.docx  04-Directory-Structure.md  05-Data-Collector-Spec.docx  05-Data-Collector-Spec.md  05-Implementation-Tasks.md  06-Normalization-Schema.docx  06-Normalization-Schema.md  06-Validation.md  07-Trend-Engine.docx  07-Trend-Engine.md  08-Campaign-Planner.docx  08-Campaign-Planner.md  09-Content-Generator.docx  09-Content-Generator.md  10-HTML-Interactive-Report.docx  10-HTML-Interactive-Report.md  11-Codex-Implementation-Tasks.docx  11-Codex-Implementation-Tasks.md  13-test-plan.md  14-Hackathon-Submission-Guide.md  15-README-Codex-Execution-Guide.docx  (+2 more)
examples/campaign/: report.md  (+6 more)
src/: ISSUES.md  README.md  pyproject.toml
src/.codex-plugin/: plugin.json
src/campaign_copilot/: __init__.py  analyze.py  cli.py  collectors.py  config.py  generate.py  models.py  normalize.py  plan.py  report.py  taxonomy.py  utils.py  workflow.py
src/data/samples/: exchange_sample.json  facebook_sample.json  flight_price_sample.json  holiday_sample.json  instagram_sample.json  naver_blog_sample.json  news_sample.json  weather_sample.json
src/skills/weekly-campaign-copilot/: SKILL.md
src/tests/: test_pipeline.py
(+8 files in other folders)
