[project]
name = "myrealtrip-weekly-campaign-copilot"
version = "0.1.0"
description = "Evidence-backed weekly campaign copilot for MyRealTrip marketing teams."
requires-python = ">=3.12"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
